--- a/acceuil.html
+++ b/acceuil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,76 +8,81 @@
     <script src="https://kit.fontawesome.com/6b42d92d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="Css/style.css">
     <title>Oh my food</title>
 </head>
+
 <body>
     <header>
-        <img src="images/logo/ohmyfood.png" alt="Logo Oh my food">
+        <h1 class="header__title">ohmyfood</h1>
     </header>
     <main>
-        <section>
-            <div>
+        <section class="location">
+            <div class="location__i">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="text" placeholder="Paris, Belleville">
             </div>
-            <div>
+            <div class="locaton__text">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
             </div>
-            <div><button>Explorer nos restaurants</button></div>
+            <div class="location__button">
+                <button>Explorer nos restaurants</button>
+            </div>
         </section>
-        <section>
+        <section class="fonction">
             <h2>Fonctionnement</h2>
-            <div>
+            <div class="fonction_button">
                 <p>
                     <span>1</span>
                 </p>
                 <button><i class="fa-solid fa-mobile-screen-button"></i>Choississez un restaurant</button>
             </div>
-            <div>
+            <div class="fonction_button">
                 <p>
                     <span>2</span>
                 </p>
-                <button><i class="fa-solid fa-list-ul"></i></i>Composez votre menu</button>
+                <button ><i class="fa-solid fa-list-ul"></i>Composez votre menu</button>
             </div>
-            <div>
+            <div class="fonction_button">
                 <p>
                     <span>3</span>
                 </p>
                 <button><i class="fa-solid fa-store"></i>Dégustez au restaurant</button>
             </div>
         </section>
-        <section>
+        <section class="rest">
             <h2>Restaurants</h2>
-            <div>
+            <div class="rest_card">
                 <a href="html/rest1.html">
-                
-                    <img src="" alt="">
+
+                    <img class="rest__card__img" src="" alt="">
                     <div></div>
                     <div>
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
-            </a>
-                </div>
+                    </div>
+                </a>
                 <div><i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-            <div>
-                <a href="html/rest2.html"">
-                    <img src="" alt="">
+            <div class="rest_card">
+                <a href="html/rest2.html">
+                    <img class="rest__card__img" src="" alt="">
                     <div></div>
                     <div>
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
-                    <div><i class="fa-regular fa-heart"></i>
+                    <div><i class=" fa-regular fa-heart"></i>
                     </div>
                 </a>
-            </div>
+            </div class="rest_card">
             <div>
                 <a href="html/rest3.html">
-                    <img src="" alt="">
+                    <img class="rest__card__img" src="" alt="">
                     <div>
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
@@ -85,9 +91,9 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rest_card">
                 <a href="html/rest4.html">
-                    <img src="" alt="">
+                    <img class="rest__card__img" src="" alt="">
                     <div>
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
@@ -98,22 +104,23 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <h1>ohmyfood</h1>
         <ul>
-            <a href="#">
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            </a>
-            <a href="#">
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            </a>
-            <a href="#">
-                <li>Mentions légales</li>
-            </a>
-            <a href="mailto: mathieu.hatstatt@gmail.com">
-                <li>Contact</li>
-            </a>
+            <li>
+                <a href="#"><i class="fa-solid fa-utensils"></i> un restaurant</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-handshake-angle"></i> partenaire</a>
+            </li>
+            <li>
+                <a href="#">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:mathieu.hatstatt@gmail.com">Contact</a>
+            </li>
         </ul>
     </footer>
 </body>
+
 </html>
