(28.11.2022-19h43) Changement de classe pour icon heart

--- a/acceuil.html
+++ b/acceuil.html
@@ -66,8 +66,8 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <div class="rest__card__content__icon">
-                            <i class="fa-regular fa-heart "></i>
+                        <div class="heart__icon">
+                            <i class="heart__icon__fa fa-regular fa-heart "></i>
                         </div>
                     </div>
                 </a>
@@ -82,8 +82,8 @@
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <div class="rest__card__content__icon">
-                            <i class=" fa-regular fa-heart "></i>
+                        <div class="heart__icon">
+                            <i class="heart__icon__fa fa-regular fa-heart "></i>
                         </div>
                     </div>
                 </a>
@@ -97,8 +97,8 @@
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <div class="rest__card__content__icon">
-                            <i class="fa-regular fa-heart "></i>
+                        <div class="heart__icon">
+                            <i class="heart__icon__fa fa-regular fa-heart "></i>
                         </div>
                     </div>
                 </a>
@@ -112,8 +112,8 @@
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <div class="rest__card__content__icon">
-                            <i class="fa-regular fa-heart "></i>
+                        <div class="heart__icon">
+                            <i class="heart__icon__fa fa-regular fa-heart"></i>
                         </div>
                     </div>
                 </a>
