(03.12.2022-11h25) Mise en place des balises pour les animations

--- a/html/rest4.html
+++ b/html/rest4.html
@@ -29,59 +29,59 @@
         <section class="restau__section">
             <h2 class="restau__section__title">Entrées</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__1">
                 <h3 class="restau__card__title">Tartare de thon</h3>
                 <div class="restau__card__text">Assaisonné au yuzu<span class="restau__card__price">25€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__2">
                 <h3 class="restau__card__title">Bouchée de homard croustillant</h3>
                 <div class="restau__card__text">Et sa farandole de petits légumes<span class="restau__card__price">35€</span>
                 </div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__3">
                 <h3 class="restau__card__title">Velouté de cèpes</h3>
                 <div class="restau__card__text">Aux truffes<span class="restau__card__price">20€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Plats</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__4">
                 <h3 class="restau__card__title">Poulet rôti aux herbes de Provence</h3>
                 <div class="restau__card__text">Et sa crème de truffe<span class="restau__card__price">40€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__5">
                 <h3 class="restau__card__title">Langouste rôtie</h3>
                 <div class="restau__card__text">Et ses légumes de saison<span class="restau__card__price">35€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__6">
                 <h3 class="restau__card__title">Côte de boeuf Angus</h3>
                 <div class="restau__card__text">Et sa purée de panais<span class="restau__card__price">44€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Desserts</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__7">
                 <h3 class="restau__card__title">Farandole de desserts</h3>
                 <div class="restau__card__text">Du chef<span class="restau__card__price">18€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__8">
                 <h3 class="restau__card__title">Crème brulée</h3>
                 <div class="restau__card__text">Revisitée<span class="restau__card__price">22€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__9">
                 <h3 class="restau__card__title">Millefeuille croustillant</h3>
                 <div class="restau__card__text">Myrtilles et pâte d’amande<span class="restau__card__price">23€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
     </main>
