--- a/html/rest1.html
+++ b/html/rest1.html
@@ -29,59 +29,58 @@
         <section class="restau__section">
             <h2 class="restau__section__title">Entrées</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__1">
                 <h3 class="restau__card__title">Fricassée d'escargot</h3>
                 <div class="restau__card__text">Au piment d'Espelette<span class="restau__card__price">25€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__2">
                 <h3 class="restau__card__title">Foie gras de canard mi-cuit</h3>
-                <div class="restau__card__text">Et ses copeaux de truffe noire<span class="restau__card__price">35€</span>
-                </div>
-                <div></div>
+                <div class="restau__card__text">Et ses copeaux de truffe noire<span class="restau__card__price">35€</span></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__3">
                 <h3 class="restau__card__title">Œuf au plat</h3>
                 <div class="restau__card__text">Assaisonné à la truffe sur lit de caviar<span class="restau__card__price">20€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Plats</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__4">
                 <h3 class="restau__card__title">Filet de boeuf aux herbes</h3>
                 <div class="restau__card__text">Accompagné de sa ribambelle de légumes<span class="restau__card__price">40€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__5">
                 <h3 class="restau__card__title">Parmentier de queue de boeuf</h3>
                 <div class="restau__card__text">À la truffe noire sur sa purée de panais<span class="restau__card__price">35€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__6">
                 <h3 class="restau__card__title">Filet de turbot</h3>
                 <div class="restau__card__text">Aux agrumes<span class="restau__card__price">44€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Desserts</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__7">
                 <h3 class="restau__card__title">Paris-Brest</h3>
                 <div class="restau__card__text">Revisité<span class="restau__card__price">18€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__8">
                 <h3 class="restau__card__title">Macaron au chocolat d'exception</h3>
                 <div class="restau__card__text">Et glace à la vanille de Madagascar<span class="restau__card__price">22€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__9">
                 <h3 class="restau__card__title">Mousse au chocolat</h3>
                 <div class="restau__card__text">Au piment d'Espelette et à la truffe noire<span class="restau__card__price">23€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
     </main>
