--- a/html/rest2.html
+++ b/html/rest2.html
@@ -29,64 +29,64 @@
         <section class="restau__section">
             <h2 class="restau__section__title">Entrées</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__1">
                 <h3 class="restau__card__title">Ravioles de foie gras</h3>
                 <div class="restau__card__text">Accompagnés de leur crème à la truffe<span class="restau__card__price">25€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__2">
                 <h3 class="restau__card__title">Caviar osciètre</h3>
                 <div class="restau__card__text">Sur blini à la farine de blé noir<span class="restau__card__price">35€</span>
                 </div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__3">
                 <h3 class="restau__card__title">Homard et espuma de potiron</h3>
                 <div class="restau__card__text">Mariné aux zestes d'orange<span class="restau__card__price">20€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__4">
                 <h3 class="restau__card__title">Foie gras de canard cuit entier</h3>
                 <div class="restau__card__text">Confiture de figue et pain toasté<span class="restau__card__price">35€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Plats</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__5">
                 <h3 class="restau__card__title">Noix de coquilles Saint-Jacques</h3>
                 <div class="restau__card__text">Sur lit de purée de céleri-rave<span class="restau__card__price">40€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__6">
                 <h3 class="restau__card__title">Langoustine poêlée</h3>
                 <div class="restau__card__text">Purée de patate douce<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__7">
                 <h3 class="restau__card__title">Mijoté de queue de boeuf</h3>
                 <div class="restau__card__text">Et riz sauvage aux zestes de citron<span class="restau__card__price">44€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Desserts</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__8">
                 <h3 class="restau__card__title">Macaron noisette et chocolat</h3>
                 <div class="restau__card__text">Glace au caramel brun et sel de Guérande<span class="restau__card__price">18€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__9">
                 <h3 class="restau__card__title">Baba au rhum revisité</h3>
                 <div class="restau__card__text">Avec son coulis de citron<span class="restau__card__price">22€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__10">
                 <h3 class="restau__card__title">Tarte au citron meringuée</h3>
                 <div class="restau__card__text">Déstructurée<span class="restau__card__price">23€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
     </main>
