--- a/html/rest3.html
+++ b/html/rest3.html
@@ -29,59 +29,59 @@
         <section class="restau__section">
             <h2 class="restau__section__title">Entrées</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__1">
                 <h3 class="restau__card__title">Tartare de poulpe acdidulé</h3>
                 <div class="restau__card__text">Aux zestes d'orange<span class="restau__card__price">25€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__2">
                 <h3 class="restau__card__title">Velouté de légumes d'antan</h3>
                 <div class="restau__card__text">Carotte, panais, topinambour<span class="restau__card__price">35€</span>
                 </div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__3">
                 <h3 class="restau__card__title">Soupe à l'oignon</h3>
                 <div class="restau__card__text">Revisitée<span class="restau__card__price">20€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Plats</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__4">
                 <h3 class="restau__card__title">Coquilles Saint-Jacques</h3>
                 <div class="restau__card__text">Accompagnées d'une purée de panais<span class="restau__card__price">40€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__5">
                 <h3 class="restau__card__title">Magret de canard</h3>
                 <div class="restau__card__text">Et parmentier de pommes de terre<span class="restau__card__price">35€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__6">
                 <h3 class="restau__card__title">Pigeonneau d’Ille-et-Vilaine</h3>
                 <div class="restau__card__text">Sur son lit de gnocchis aux légumes<span class="restau__card__price">44€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
         <section class="restau__section">
             <h2 class="restau__section__title">Desserts</h2>
             <div class="restau__underline"></div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__7">
                 <h3 class="restau__card__title">Pétales de violettes glacés</h3>
                 <div class="restau__card__text">Et purée de noisettes<span class="restau__card__price">18€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__8">
                 <h3 class="restau__card__title">Fondant au chocolat</h3>
                 <div class="restau__card__text">Revisité<span class="restau__card__price">22€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card">
+            <div class="restau__card restau__card__9">
                 <h3 class="restau__card__title">Millefeuille croustillant</h3>
                 <div class="restau__card__text">Myrtilles et pâte d’amande<span class="restau__card__price">23€</span></div>
-                <div></div>
+                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
         </section>
     </main>
