(10.12.2022-19h56) Correction fautes d'orthographe

--- a/acceuil.html
+++ b/acceuil.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <h1 class="preloader__title">ohmyfood</h1>
+        <span class="preloader__loader"></span>
+    </div>
     <header class="header">
         <h1 class="header__title">ohmyfood</h1>
     </header>
@@ -27,7 +31,7 @@
             </div>
             <div>
                 <h2 class="location__title title">Réservez le menu qui vous convient</h2>
-                <p class="location__text">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
+                <p class="location__text">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             </div>
             <div>
                 <button class="location__button button__purple">Explorer nos restaurants</button>
