(10.12.2022-20:16) Rajout d'une classe pour la partie à 4 cartes

--- a/html/rest2.html
+++ b/html/rest2.html
@@ -34,7 +34,7 @@
                     <h2 class="restau__section__title">Entrées</h2>
                     <div class="restau__section__underline"></div>
                 </div>
-                <div class="restau--row">
+                <div class="restau--row row4cards">
                     <div class="restau__card restau__card__1">
                         <div class="restau__card__content">
                             <h3 class="restau__card__title">Ravioles de foie gras</h3>
