--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                 </div>
                 <div class="rest__card">
                     <a href="src/html/rest2.html">
-                        <img class="rest__card__img" src="src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg""
-                            alt="photo plat">
+                        <img class="rest__card__img" src="src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo plat">
                         <div></div>
                         <div class="rest__card__content">
                             <div class="rest__card__content__text">
